fix more code smells